# agents-training

ai-lead-qualification/: .gitignore  main.py  models.py  observability.py  pyproject.toml  retry.py  routing.py  storage.py  tools.py  workflow.py
ai-lead-qualification/api/: app.py  routes.py
ai-lead-qualification/app/api/: app.py  routes.py
ai-lead-qualification/app/core/: observability.py  retry.py
ai-lead-qualification/app/domain/: models.py
ai-lead-qualification/app/storage/: database.py  orm_models.py  repository.py
ai-lead-qualification/app/workflow/: routing.py  runner.py  tools.py
ai-lead-qualification/tests/: conftest.py  test_models.py  test_routing.py  test_storage.py  test_tools.py  test_workflow.py
docs/: learning-plan-project2-langgraph.md  learning-plan.md
